knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/linkedin_si__Company_Profile__c.object-meta.xml
<CustomObject>
    <description>Profile of LinkedIn Sales Insights data for an Account</description>
    <label>LinkedIn Company Profile</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LinkedIn Company Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>