knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Account__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LinkedIn Company Profile</relationshipLabel>
    <relationshipName>Company_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>