knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Company_Size_Range__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Company_Size_Range__c</fullName>
    <description>Company size from the LinkedIn Company Page</description>
    <label>Company Size Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>