knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Company_Website_Url__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Company_Website_Url__c</fullName>
    <description>Company website URL listed on LinkedIn</description>
    <label>Company Website URL</label>
    <type>Url</type>
</CustomField>