knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Global_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Global_Employee_Count__c</fullName>
    <description>Total number of individuals with current jobs at the company listed on their LinkedIn profile</description>
    <label>Global Employee Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>