knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Global_Employee_Growth__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Global_Employee_Growth__c</fullName>
    <description>The percent change in total employees at the company over the past 12 months</description>
    <label>Global Employee Growth</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>