knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Headquarters_Country__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Headquarters_Country__c</fullName>
    <description>Country where the company is headquartered</description>
    <label>Headquarters Country</label>
    <length>150</length>
    <type>Text</type>
</CustomField>