knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Headquarters_State__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Headquarters_State__c</fullName>
    <description>State where the company is headquartered</description>
    <label>Headquarters State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>