knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Industry__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Industry__c</fullName>
    <description>Company industry as it appears on LinkedIn</description>
    <label>Industry</label>
    <length>150</length>
    <type>Text</type>
</CustomField>