knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Last_Export_Date__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Last_Export_Date__c</fullName>
    <description>Last successful export date</description>
    <label>Last Export Date</label>
    <type>Date</type>
</CustomField>