knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Linkedin_Company_Page_Url__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Linkedin_Company_Page_Url__c</fullName>
    <description>LinkedIn&apos;s company profile URL</description>
    <label>LinkedIn.com Company Page URL</label>
    <type>Url</type>
</CustomField>