knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Linkedin_Id__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Linkedin_Id__c</fullName>
    <description>LinkedIn&apos;s company ID</description>
    <externalId>true</externalId>
    <label>LinkedIn ID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>