knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__LSI_External_Id__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__LSI_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Salesforce Account ID specified by LinkedIn Sales Insights</description>
    <externalId>true</externalId>
    <label>LSI External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>