knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Parent_LinkedIn_ID__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Parent_LinkedIn_ID__c</fullName>
    <description>Parent company’s LinkedIn ID</description>
    <label>Parent LinkedIn ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>