knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Ultimate_Parent_CRM_ID__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Ultimate_Parent_CRM_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ultimate Parent Customer Relationship Management (“CRM”) ID</description>
    <label>Ultimate Parent CRM ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LinkedIn Ultimate Child Company Profile</relationshipLabel>
    <relationshipName>Ultimate_Child_Company_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>