knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/fields/linkedin_si__Ultimate_Parent_LinkedIn_ID__c.field-meta.xml
<CustomField>
    <fullName>linkedin_si__Ultimate_Parent_LinkedIn_ID__c</fullName>
    <description>Ultimate parent company’s LinkedIn ID</description>
    <label>Ultimate Parent LinkedIn ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>