knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/linkedin_si__Company_Profile__c/listViews/linkedin_si__All.listView-meta.xml
<ListView>
    <fullName>linkedin_si__All</fullName>
    <columns>NAME</columns>
    <columns>linkedin_si__Global_Employee_Count__c</columns>
    <columns>linkedin_si__Global_Employee_Growth__c</columns>
    <columns>linkedin_si__Headquarters_City__c</columns>
    <columns>linkedin_si__Headquarters_State__c</columns>
    <columns>linkedin_si__Headquarters_Country__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>-</value>
    </filters>
    <label>All</label>
</ListView>